z-index fix

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h1 {
   display: none;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Damit es ganz vorne liegt */
+  z-index: 1; /* Damit es ganz vorne liegt */
   
 }
 
